{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 10,
  "lineage": "2bf97423-6e8b-73ef-adf8-234874ca8787",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:061039803094:instance/i-0044eb88db716c5cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0044eb88db716c5cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa844352d11e18e4",
            "private_dns": "ip-10-0-1-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-54-167-74-253.compute-1.amazonaws.com",
            "public_ip": "54.167.74.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-052613343d86b53e2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0048fe4f6d59c198f",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Prod-Server",
              "Owner": "sai"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Prod-Server",
              "Owner": "sai"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e83dae80ee5547d"
            ]
          },
          "dependencies": [
            "aws_security_group.varDay2-SG",
            "aws_subnet.varDay2-subnet-1",
            "aws_vpc.varDay2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "varDay2-Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:internet-gateway/igw-062d0f1fb0842e8d7",
            "id": "igw-062d0f1fb0842e8d7",
            "owner_id": "061039803094",
            "tags": {
              "Name": "varDay2-Igw"
            },
            "tags_all": {
              "Name": "varDay2-Igw"
            },
            "vpc_id": "vpc-0b6ee59295016c160"
          },
          "dependencies": [
            "aws_vpc.varDay2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "varDay2-RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:route-table/rtb-00af0d890c29af209",
            "id": "rtb-00af0d890c29af209",
            "owner_id": "061039803094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062d0f1fb0842e8d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "varDay2-RouteTable",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "varDay2-RouteTable",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6ee59295016c160"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.varDay2-Igw",
            "aws_vpc.varDay2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "varDay2-RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bd90c9a96a41cfd",
            "route_table_id": "rtb-00af0d890c29af209",
            "subnet_id": "subnet-0048fe4f6d59c198f"
          },
          "dependencies": [
            "aws_internet_gateway.varDay2-Igw",
            "aws_route_table.varDay2-RouteTable",
            "aws_subnet.varDay2-subnet-1",
            "aws_vpc.varDay2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "varDay2-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:security-group/sg-09e83dae80ee5547d",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e83dae80ee5547d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "varDay2-SG",
            "name_prefix": "",
            "owner_id": "061039803094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "varDay2-SG"
            },
            "tags_all": {
              "Name": "varDay2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6ee59295016c160"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.varDay2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "varDay2-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:subnet/subnet-0048fe4f6d59c198f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0048fe4f6d59c198f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061039803094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "varDay2-subnet-1"
            },
            "tags_all": {
              "Name": "varDay2-subnet-1"
            },
            "vpc_id": "vpc-0b6ee59295016c160"
          },
          "dependencies": [
            "aws_vpc.varDay2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "varDay2-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:vpc/vpc-0b6ee59295016c160",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018e9486a7394dd4f",
            "default_route_table_id": "rtb-01e43f5c42eba3a33",
            "default_security_group_id": "sg-0f46d0d002a0c6df2",
            "dhcp_options_id": "dopt-05c09a9e4353ce38a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b6ee59295016c160",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e43f5c42eba3a33",
            "owner_id": "061039803094",
            "tags": {
              "Name": "varDay2-vpc"
            },
            "tags_all": {
              "Name": "varDay2-vpc"
            }
          }
        }
      ]
    }
  ]
}